# Final-Year-Project

./: .gitignore  README.md  performance_test.ipynb  pyproject.toml  random_walk_example.ipynb  training_times.ipynb
TimeFusion/: data.py  deterministic.py  diffusion.py  electricity.ipynb  epsilon_theta.py  lstm_diffusion.ipynb  metrics.py  performance_test.ipynb  pyproject.toml  random_walk_example.ipynb  time_grad_network.py  timefusion.py  tmp.ipynb  tmp.py
TimeFusion/examples/: electricity.ipynb  exchange.ipynb  solar.ipynb
TimeFusion/old/: test1.ipynb
TimeFusion/training_scripts/: electricity.py  exchange.py
TimeFusion/training_scripts/configs/: electricity_1.json  ranges.json  select_configs.py
TimeFusion/training_scripts/results/: performance.py  process_results.ipynb
TimeFusion/utils/: data.py  deterministic.py  diffusion.py  metrics.py  modules.py  scaler.py
TimeFusion/visualisation_notebooks/: electricity.ipynb
TimeTransFusion/old/: timetransfusion.py
classical_models/: VAR.ipynb  pyproject.toml
datasets/electricity/: data_processing.py
datasets/exchange/: data_processing.py
datasets/solar/: data_processing.py
deepar/: electricity.ipynb  exchange.ipynb  pyproject.toml  solar.ipynb
deepar/training_scripts/: electricity.py  electricity2.ipynb  exchange.py  solar.py  test_electricity.py  test_exchange.py  test_solar.py
deepar/training_scripts/configs/: deepar_0.json  electricity_0.json  exchange_0.json  ranges.json  select_configs.py  solar_0.json
deepar/training_scripts/results/: process_results.ipynb
exploration/: README.md  timegrad.ipynb
forecast-performance/: k-nn.ipynb
gpvar/: electricity.ipynb  pyproject.toml
gpvar/training_scripts/: exchange.py
gpvar/training_scripts/configs/: gpvar_0.json  ranges.json  select_configs.py
hpc/: .copy-ignore  copy_files.sh  deepar_array.pbs  gpvar_array.pbs  hpc-instructions.md  run_python.sh  submit.pbs  submit_array.pbs  submit_deepar.pbs  submit_timegrad.pbs  submit_transformermaf.pbs  timegrad_array.pbs  transformermaf_array.pbs
hpc/log-files/: info.md
timefusion/: epsilon_theta.py  pyproject.toml  timefusion.py
timefusion/examples/: electricity.ipynb  exchange.ipynb  solar.ipynb
timefusion/training_scripts/: electricity.py  exchange.py  solar.py  test_electricity.py  test_exchange.py  test_solar.py
timefusion/training_scripts/configs/: electricity_0.json  electricity_1.json  electricity_15.json  exchange_0.json  exchange_5.json  ranges.json  ranges2.json  ranges3.json  select_configs.py  solar_0.json  solar_11.json  timefusion2_0.json  timefusion3_0.json  timefusion_0.json
timefusion/training_scripts/results/: performance.py  process_results.ipynb
timefusion/utils/: data.py  diffusion.py  early_stopper.py  metrics.py  scaler.py
timefusion_old/: data.py  diffusion.py  electricity.ipynb  pyproject.toml
timefusion_old/training_scripts/: electricity.py  electricity_old.py  tmp.py  tmp2.py
timefusion_old/utils/: metrics.py  modules.py
timegrad/: electricity.ipynb  exchange.ipynb  pyproject.toml  solar.ipynb  timegrad.ipynb  timegrad_bimodal.ipynb  timegrad_custom.ipynb  timegrad_custom_old.ipynb  timegrad_electricity.ipynb  timegrad_traffic.ipynb
timegrad/training_scripts/: electricity.py  exchange.py  solar.py  test_electricity.py  test_exchange.py  test_solar.py
timegrad/training_scripts/configs/: electricity_0.json  exchange_0.json  ranges.json  select_configs.py  solar_0.json  timegrad_0.json
timegrad/training_scripts/results/: process_results.ipynb
transformer_maf/: electricity.ipynb  exchange.ipynb  pyproject.toml  solar.ipynb
transformer_maf/training_scripts/: electricity.py  exchange.py  solar.py  test_electricity.py  test_exchange.py  test_solar.py
transformer_maf/training_scripts/configs/: electricity_0.json  exchange_0.json  ranges.json  select_configs.py  solar_0.json  transformermaf_0.json
transformer_maf/training_scripts/results/: process_results.ipynb
