[tool.poetry]
name = "classical-models"
version = "0.1.0"
description = ""
authors = ["Edvard J. Skaarberg Holen <edvard.holen19@imperial.ac.uk>"]
readme = "README.md"
packages = [{include = "classical_models"}]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.23.1"
pandas = "^2.0.1"
torch = "^2.0.1"
statsmodels = "^0.14.0"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
