[tool.poetry]
name = "deepar"
version = "0.1.0"
description = ""
authors = ["Edvard J. Skaarberg Holen <edvard.holen19@imperial.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.0.2"
gluonts = "^0.13.1"
ipykernel = "^6.23.1"
matplotlib = "^3.7.1"
torch = "^2.0.1"
pytorch-lightning = "^2.0.2"
setuptools = "^67.8.0"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
