[tool.poetry]
name = "deepar"
version = "0.1.0"
description = ""
authors = ["Edvard J. Skaarberg Holen"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
gluonts = "^0.13.1"
pytorch-lightning = "^2.0.2"
ipykernel = "^6.23.1"
matplotlib = "^3.7.1"
ujson = "^5.7.0"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
