[tool.poetry]
name = "gpvar"
version = "0.1.0"
description = ""
authors = ["Edvard J. Skaarberg Holen <edvard.holen19@imperial.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gluonts = "^0.13.1"
ipykernel = "^6.23.1"
torch = "<2.0"
numpy = "<1.22"
scikit-learn = "^1.2.2"
ujson = "^5.7.0"
tqdm = "^4.65.0"
ipywidgets = "^8.0.6"
mxnet = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
