[tool.poetry]
name = "timefusion"
version = "0.1.0"
description = "Library for the TimeFusion model in PyTorch"
authors = ["Edvard J. Skaarberg Holen <edvard.holen19@imperial.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
pandas = "^2.0.1"
tqdm = "^4.65.0"
ipykernel = "^6.23.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
