[tool.poetry]
name = "timegrad"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
gluonts = "0.9.0"
pytorchts = "^0.6.0"
ipykernel = "^6.19.4"
numpy = "1.21.6"
ujson = "^5.6.0"
#pandas = "1.3.5" # Can remove, just trying to remove error


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
