[tool.poetry]
name = "timegrad"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytorchts = "^0.6.0"
numpy = "^1.24.3"
gluonts = "0.9.0"
pytorch-lightning = "^2.0.2"
ujson = "^5.7.0"
ipykernel = "^6.23.1"
tqdm = "^4.65.0"
ipywidgets = "^8.0.6"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
